--- a/src/main/gui/home.ui
+++ b/src/main/gui/home.ui
@@ -11,10 +11,28 @@
    </rect>
   </property>
   <property name="sizePolicy">
-   <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+   <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
     <horstretch>0</horstretch>
     <verstretch>0</verstretch>
    </sizepolicy>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>740</width>
+    <height>600</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>740</width>
+    <height>600</height>
+   </size>
+  </property>
+  <property name="baseSize">
+   <size>
+    <width>740</width>
+    <height>600</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>AnconAmbienteERP</string>
@@ -448,7 +466,7 @@ font:  bold 14px
       <x>70</x>
       <y>-160</y>
       <width>761</width>
-      <height>541</height>
+      <height>371</height>
      </rect>
     </property>
     <property name="text">
