--- a/src/main/gui/xz.qrc
+++ b/src/main/gui/xz.qrc
@@ -1,6 +1,7 @@
 <RCC>
   <qresource prefix="images">
     <file>images/profile-user60.png</file>
+    <file>images/loupe (1) (1).png</file>
     <file>images/padlock40.png</file>
     <file>images/user40.png</file>
     <file>images/AnconAmbiente_Logo.png</file>
