--- a/src/main/gui/clienti.ui
+++ b/src/main/gui/clienti.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>MainWindow</class>
- <widget class="QMainWindow" name="MainWindow">
+ <class>listaclienti_window</class>
+ <widget class="QMainWindow" name="listaclienti_window">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -10,65 +10,14 @@
     <height>525</height>
    </rect>
   </property>
-  <property name="sizePolicy">
-   <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-    <horstretch>0</horstretch>
-    <verstretch>0</verstretch>
-   </sizepolicy>
-  </property>
-  <property name="minimumSize">
-   <size>
-    <width>624</width>
-    <height>525</height>
-   </size>
-  </property>
-  <property name="maximumSize">
-   <size>
-    <width>624</width>
-    <height>525</height>
-   </size>
-  </property>
   <property name="windowTitle">
-   <string>Gestione Operatori</string>
+   <string>Gestione Clienti</string>
   </property>
   <property name="windowIcon">
    <iconset resource="xz.qrc">
     <normaloff>:/images/images/AnconAmbiente_Logo.png</normaloff>:/images/images/AnconAmbiente_Logo.png</iconset>
   </property>
-  <property name="tabShape">
-   <enum>QTabWidget::Rounded</enum>
-  </property>
-  <widget class="QWidget" name="listaoperatori_widget">
-   <widget class="QPushButton" name="modifica_button">
-    <property name="geometry">
-     <rect>
-      <x>170</x>
-      <y>20</y>
-      <width>75</width>
-      <height>23</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">QPushButton{
-background-color:rgb(24, 105, 68);
-color: white;
-border-style: outset;
-font:  bold 11px
-
-
-}
-
-QPushButton:hover{
-background-color:rgb(170, 203, 108);
-color: white;
-border-style: outset;
-font:  bold 11px
-}</string>
-    </property>
-    <property name="text">
-     <string>MODIFICA</string>
-    </property>
-   </widget>
+  <widget class="QWidget" name="listaclienti_widget">
    <widget class="QPushButton" name="visualizza_button">
     <property name="geometry">
      <rect>
@@ -99,10 +48,23 @@ font:  bold 11px
      <string>VISUALIZZA</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="inserisci_button">
+   <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>10</x>
+      <x>350</x>
+      <y>20</y>
+      <width>21</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;img src=&quot;:/images/images/loupe (1) (1).png&quot;/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="modifica_button">
+    <property name="geometry">
+     <rect>
+      <x>170</x>
       <y>20</y>
       <width>75</width>
       <height>23</height>
@@ -126,20 +88,10 @@ font:  bold 11px
 }</string>
     </property>
     <property name="text">
-     <string>INSERISCI</string>
+     <string>MODIFICA</string>
     </property>
    </widget>
-   <widget class="QLineEdit" name="search_field">
-    <property name="geometry">
-     <rect>
-      <x>370</x>
-      <y>20</y>
-      <width>161</width>
-      <height>21</height>
-     </rect>
-    </property>
-   </widget>
-   <widget class="QTableWidget" name="tabella_operatori">
+   <widget class="QTableWidget" name="tabella_clienti">
     <property name="geometry">
      <rect>
       <x>10</x>
@@ -189,10 +141,10 @@ font:  bold 11px
      </property>
     </column>
    </widget>
-   <widget class="QPushButton" name="indietr_button">
+   <widget class="QPushButton" name="inserisci_button">
     <property name="geometry">
      <rect>
-      <x>540</x>
+      <x>10</x>
       <y>20</y>
       <width>75</width>
       <height>23</height>
@@ -216,20 +168,7 @@ font:  bold 11px
 }</string>
     </property>
     <property name="text">
-     <string>INDIETRO</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label">
-    <property name="geometry">
-     <rect>
-      <x>350</x>
-      <y>20</y>
-      <width>21</width>
-      <height>21</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;img src=&quot;:/images/images/loupe (1) (1).png&quot;/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+     <string>INSERISCI</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_2">
@@ -273,6 +212,46 @@ font:  bold 11px
     </property>
     <property name="text">
      <string>ELIMINA</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="indietr_button">
+    <property name="geometry">
+     <rect>
+      <x>540</x>
+      <y>20</y>
+      <width>75</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QPushButton{
+background-color:rgb(24, 105, 68);
+color: white;
+border-style: outset;
+font:  bold 11px
+
+
+}
+
+QPushButton:hover{
+background-color:rgb(170, 203, 108);
+color: white;
+border-style: outset;
+font:  bold 11px
+}</string>
+    </property>
+    <property name="text">
+     <string>INDIETRO</string>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="search_field">
+    <property name="geometry">
+     <rect>
+      <x>370</x>
+      <y>20</y>
+      <width>161</width>
+      <height>21</height>
+     </rect>
     </property>
    </widget>
   </widget>
