--- a/src/main/gui/modifica_turno.ui
+++ b/src/main/gui/modifica_turno.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>inserimentoturno_window</class>
- <widget class="QMainWindow" name="inserimentoturno_window">
+ <class>modificaturno_window</class>
+ <widget class="QMainWindow" name="modificaturno_window">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -11,13 +11,9 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Inserimento Turno</string>
+   <string>Modifica Turno</string>
   </property>
-  <property name="windowIcon">
-   <iconset resource="xz.qrc">
-    <normaloff>:/images/images/AnconAmbiente_Logo.png</normaloff>:/images/images/AnconAmbiente_Logo.png</iconset>
-  </property>
-  <widget class="QWidget" name="inserimentoturno_widget">
+  <widget class="QWidget" name="modificaturno_widget">
    <widget class="QTabWidget" name="inserimentoturno_tabs">
     <property name="geometry">
      <rect>
@@ -28,13 +24,13 @@
      </rect>
     </property>
     <property name="currentIndex">
-     <number>2</number>
+     <number>0</number>
     </property>
-    <widget class="QWidget" name="dati_tab">
+    <widget class="QWidget" name="dati_tab_2">
      <attribute name="title">
       <string>Dati</string>
      </attribute>
-     <widget class="QLabel" name="label">
+     <widget class="QLabel" name="label_4">
       <property name="geometry">
        <rect>
         <x>10</x>
@@ -47,7 +43,7 @@
        <string>Inizio Turno:</string>
       </property>
      </widget>
-     <widget class="QLabel" name="label_2">
+     <widget class="QLabel" name="label_7">
       <property name="geometry">
        <rect>
         <x>10</x>
@@ -60,7 +56,7 @@
        <string>Fine Turno:</string>
       </property>
      </widget>
-     <widget class="QDateTimeEdit" name="inizio_datepicker">
+     <widget class="QDateTimeEdit" name="inizio_datepicker_2">
       <property name="geometry">
        <rect>
         <x>80</x>
@@ -70,7 +66,7 @@
        </rect>
       </property>
      </widget>
-     <widget class="QDateTimeEdit" name="fine_datepicker">
+     <widget class="QDateTimeEdit" name="fine_datepicker_2">
       <property name="geometry">
        <rect>
         <x>80</x>
@@ -80,7 +76,7 @@
        </rect>
       </property>
      </widget>
-     <widget class="QComboBox" name="servizio_combo">
+     <widget class="QComboBox" name="servizio_combo_2">
       <property name="geometry">
        <rect>
         <x>80</x>
@@ -90,7 +86,7 @@
        </rect>
       </property>
      </widget>
-     <widget class="QLabel" name="label_3">
+     <widget class="QLabel" name="label_8">
       <property name="geometry">
        <rect>
         <x>10</x>
@@ -104,11 +100,11 @@
       </property>
      </widget>
     </widget>
-    <widget class="QWidget" name="mezzi_widget">
+    <widget class="QWidget" name="mezzi_widget_2">
      <attribute name="title">
       <string>Mezzi</string>
      </attribute>
-     <widget class="QComboBox" name="mezzo1_combo">
+     <widget class="QComboBox" name="mezzo1_combo_2">
       <property name="geometry">
        <rect>
         <x>90</x>
@@ -118,7 +114,7 @@
        </rect>
       </property>
      </widget>
-     <widget class="QLabel" name="label_6">
+     <widget class="QLabel" name="label_9">
       <property name="geometry">
        <rect>
         <x>10</x>
@@ -131,7 +127,7 @@
        <string>Mezzo 1:</string>
       </property>
      </widget>
-     <widget class="QPushButton" name="aggiungimezzo_button">
+     <widget class="QPushButton" name="aggiungimezzo_button_2">
       <property name="geometry">
        <rect>
         <x>10</x>
@@ -145,11 +141,11 @@
       </property>
      </widget>
     </widget>
-    <widget class="QWidget" name="operatori_tab">
+    <widget class="QWidget" name="operatori_tab_2">
      <attribute name="title">
       <string>Operatori</string>
      </attribute>
-     <widget class="QLabel" name="label_5">
+     <widget class="QLabel" name="label_10">
       <property name="geometry">
        <rect>
         <x>10</x>
@@ -162,7 +158,7 @@
        <string>Operatore 1:</string>
       </property>
      </widget>
-     <widget class="QComboBox" name="operatore1_combo">
+     <widget class="QComboBox" name="operatore1_combo_2">
       <property name="geometry">
        <rect>
         <x>90</x>
@@ -172,7 +168,7 @@
        </rect>
       </property>
      </widget>
-     <widget class="QPushButton" name="aggiungioperatore_button">
+     <widget class="QPushButton" name="aggiungioperatore_button_2">
       <property name="geometry">
        <rect>
         <x>10</x>
@@ -187,12 +183,12 @@
      </widget>
     </widget>
    </widget>
-   <widget class="QPushButton" name="inserisci_button">
+   <widget class="QPushButton" name="salva_button">
     <property name="geometry">
      <rect>
       <x>10</x>
       <y>190</y>
-      <width>141</width>
+      <width>90</width>
       <height>23</height>
      </rect>
     </property>
@@ -214,15 +210,45 @@ font:  bold 11px
 }</string>
     </property>
     <property name="text">
-     <string>INSERISCI</string>
+     <string>SALVA</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="elimina_button">
+    <property name="geometry">
+     <rect>
+      <x>110</x>
+      <y>190</y>
+      <width>90</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QPushButton{
+background-color:rgb(24, 105, 68);
+color: white;
+border-style: outset;
+font:  bold 11px
+
+
+}
+
+QPushButton:hover{
+background-color:rgb(170, 203, 108);
+color: white;
+border-style: outset;
+font:  bold 11px
+}</string>
+    </property>
+    <property name="text">
+     <string>ELIMINA</string>
     </property>
    </widget>
    <widget class="QPushButton" name="annulla_button">
     <property name="geometry">
      <rect>
-      <x>160</x>
+      <x>210</x>
       <y>190</y>
-      <width>141</width>
+      <width>90</width>
       <height>23</height>
      </rect>
     </property>
@@ -250,8 +276,6 @@ font:  bold 11px
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
- <resources>
-  <include location="xz.qrc"/>
- </resources>
+ <resources/>
  <connections/>
 </ui>
