--- a/src/main/gui/modifica_cliente.ui
+++ b/src/main/gui/modifica_cliente.ui
@@ -13,6 +13,10 @@
   <property name="windowTitle">
    <string>Modifica Cliente</string>
   </property>
+  <property name="windowIcon">
+   <iconset resource="xz.qrc">
+    <normaloff>:/images/images/AnconAmbiente_Logo.png</normaloff>:/images/images/AnconAmbiente_Logo.png</iconset>
+  </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QLineEdit" name="indirizzo_field">
     <property name="geometry">
@@ -238,6 +242,8 @@ font:  bold 11px
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
- <resources/>
+ <resources>
+  <include location="xz.qrc"/>
+ </resources>
  <connections/>
 </ui>
