--- a/src/main/gui/modifica_mezzo.ui
+++ b/src/main/gui/modifica_mezzo.ui
@@ -13,6 +13,10 @@
   <property name="windowTitle">
    <string>Modifica Mezzo</string>
   </property>
+  <property name="windowIcon">
+   <iconset resource="xz.qrc">
+    <normaloff>:/images/images/AnconAmbiente_Logo.png</normaloff>:/images/images/AnconAmbiente_Logo.png</iconset>
+  </property>
   <widget class="QWidget" name="modificamezzo_widget">
    <widget class="QLabel" name="label_7">
     <property name="geometry">
@@ -255,6 +259,8 @@ font:  bold 11px
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
- <resources/>
+ <resources>
+  <include location="xz.qrc"/>
+ </resources>
  <connections/>
 </ui>
