--- a/src/main/gui/visualizza_utente.ui
+++ b/src/main/gui/visualizza_utente.ui
@@ -13,6 +13,10 @@
   <property name="windowTitle">
    <string>Visualizza Utente</string>
   </property>
+  <property name="windowIcon">
+   <iconset resource="xz.qrc">
+    <normaloff>:/images/images/AnconAmbiente_Logo.png</normaloff>:/images/images/AnconAmbiente_Logo.png</iconset>
+  </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QLabel" name="label_6">
     <property name="geometry">
@@ -327,6 +331,8 @@ font:  bold 11px
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
- <resources/>
+ <resources>
+  <include location="xz.qrc"/>
+ </resources>
  <connections/>
 </ui>
