--- a/src/main/gui/login.ui
+++ b/src/main/gui/login.ui
@@ -158,7 +158,7 @@ font:  bold 14px
      <string>Password</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label_5">
+   <widget class="QLabel" name="warning_label">
     <property name="geometry">
      <rect>
       <x>50</x>
