--- a/src/main/gui/visualizza_operatore.ui
+++ b/src/main/gui/visualizza_operatore.ui
@@ -36,8 +36,8 @@
      <rect>
       <x>20</x>
       <y>105</y>
-      <width>47</width>
-      <height>13</height>
+      <width>71</width>
+      <height>16</height>
      </rect>
     </property>
     <property name="text">
@@ -114,7 +114,7 @@ font:  bold 11px
 }</string>
     </property>
     <property name="text">
-     <string>INDIETRO</string>
+     <string>ANNULLA</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_4">
@@ -260,7 +260,7 @@ font:  bold 11px
      <string/>
     </property>
    </widget>
-   <widget class="QLabel" name="stato_Label">
+   <widget class="QLabel" name="stato_label">
     <property name="geometry">
      <rect>
       <x>170</x>
