--- a/src/main/gui/modifica_mezzo.ui
+++ b/src/main/gui/modifica_mezzo.ui
@@ -169,6 +169,9 @@ font:  bold 11px
       <height>22</height>
      </rect>
     </property>
+    <property name="displayFormat">
+     <string>MM/dd/yyyy</string>
+    </property>
    </widget>
    <widget class="QPushButton" name="salva_button">
     <property name="geometry">
