--- a/src/main/gui/modifica_operatore.ui
+++ b/src/main/gui/modifica_operatore.ui
@@ -192,6 +192,9 @@ font:  bold 11px
     <property name="displayFormat">
      <string>MM/dd/yyyy</string>
     </property>
+    <property name="calendarPopup">
+     <bool>true</bool>
+    </property>
    </widget>
    <widget class="QDateEdit" name="finecontratto_datepicker">
     <property name="geometry">
@@ -204,6 +207,9 @@ font:  bold 11px
     </property>
     <property name="displayFormat">
      <string>MM/dd/yyyy</string>
+    </property>
+    <property name="calendarPopup">
+     <bool>true</bool>
     </property>
    </widget>
    <widget class="QLineEdit" name="nome_field">
