--- a/src/main/gui/inserimento_operatore.ui
+++ b/src/main/gui/inserimento_operatore.ui
@@ -6,9 +6,21 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>389</width>
-    <height>399</height>
+    <width>390</width>
+    <height>390</height>
    </rect>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>390</width>
+    <height>390</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>390</width>
+    <height>390</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>Inserimento Operatore</string>
