--- a/src/main/gui/visualizza_operatore.ui
+++ b/src/main/gui/visualizza_operatore.ui
@@ -10,6 +10,18 @@
     <height>395</height>
    </rect>
   </property>
+  <property name="minimumSize">
+   <size>
+    <width>380</width>
+    <height>395</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>380</width>
+    <height>395</height>
+   </size>
+  </property>
   <property name="windowTitle">
    <string>Visualizza Operatore</string>
   </property>
@@ -87,7 +99,7 @@ font:  bold 11px
      <string>MODIFICA</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="annulla_button">
+   <widget class="QPushButton" name="indietro_button">
     <property name="geometry">
      <rect>
       <x>200</x>
@@ -114,7 +126,7 @@ font:  bold 11px
 }</string>
     </property>
     <property name="text">
-     <string>ANNULLA</string>
+     <string>INDIETRO</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_4">
